# mcp-gamecube-bridge

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml
